# Training_Projects

./: .gitignore  BAGMET_home_work_12.py  Fibonacci_closing_recursion.py  Motloh.py  NWD_dzielenie.py  Password_generator.py  ThreadPoolExecutor.py  address_book.pkl  async_for.py  async_forever.py  async_gather.py  async_get_http.py  async_queue.py  async_wait.py  calculator_Dubovyi.py  client.py  client_aiohttp.py  codewars.py  codewars_more.py  contacts.json  create_sql.py  currying_practice.py  decorator_practice.py  factorial_reduce.py  factorize.py  future_practice.py  ivan.py  module_10.py  module_11.py  module_11_ex_11.py  module_11_ex_5.py  module_11_ex_6.py  multiproc.py  my_contacts.csv  practice.py  practice_module_12.py  practice_more.py  practice_web.py  project_phonebook.py  project_phonebook_1.py  (+9 more)
Server_app/: app.py  index.html
Server_app/assets/css/: app.css
Server_app/assets/js/: app.js
Server_app/storage/: data.json
